fixed line wrap problem in posts

--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,10 @@
   src: url('/assets/fonts/SourceCodePro-Regular.otf') format('opentype');
 }
 
+p {
+  overflow-wrap: break-word;
+}
+
 body {
   font-family: Helvetica, sans-serif;
   font-size: 16px;
